Fixed background no-repeat and correct z-index

--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -53,6 +53,7 @@ nav {
   top: 0;
   font-family: "Lato", sans-serif;
   box-shadow: 0px 3px 5px 0px #aaaaaa;
+  z-index: 99;
 
   a {
     display: block;
