--- a/frontend/src/stylesheets/stylesheet.scss
+++ b/frontend/src/stylesheets/stylesheet.scss
@@ -1,8 +1,7 @@
 $bkg-color: #ffffff;
-$color-blue: #4E7D98;
+$color-blue: #4e7d98;
 $color-blue-dark: #285f7f;
 $mainWindowTopPlacement: 20%;
-
 
 .App {
   background-color: FFFFFF;
@@ -18,6 +17,7 @@ $mainWindowTopPlacement: 20%;
   padding: 0;
   margin: 0;
   background-image: url("../resources/bkg_pic_1.png");
+  background-repeat: no-repeat;
 }
 
 .mainItem {
@@ -54,9 +54,13 @@ $mainWindowTopPlacement: 20%;
   position: absolute;
   left: 13%;
   right: 13%;
-  top: $mainWindowTopPlacement+2;
+  top: $mainWindowTopPlacement + 2;
   bottom: 15%;
-  background: linear-gradient(0deg, rgba(250, 250, 250, 0.6), rgba(250, 250, 250, 0.6));
+  background: linear-gradient(
+    0deg,
+    rgba(250, 250, 250, 0.6),
+    rgba(250, 250, 250, 0.6)
+  );
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
 
@@ -72,7 +76,6 @@ body {
 code {
   font-family: "Helvetica neue";
 }
-
 
 section {
   width: 80%;
@@ -100,5 +103,5 @@ script {
 
 .sampleGraph {
   height: 75%;
-  width: 100%
+  width: 100%;
 }
